Récupération de la liste des mailingLists actifs

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
             "config.php",
             "src/fonctions.php",
             "models/MailingList.php",
-            "controllers/MailingList.php",
-            "controllers/Suscriber.php"
+            "controllers/GETController.php",
+            "controllers/POSTController.php"
         ]
     }
 }
