--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -7,45 +7,33 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "ce5e29aa5208417700e7f7012a236c00",
-      "css": "undo",
+      "uid": "41087bc74d4b20b55059c60a33bf4008",
+      "css": "edit",
       "code": 59392,
-      "src": "iconic"
+      "src": "fontawesome"
     },
     {
-      "uid": "8d8f4722d16e95290858eaf294d9d830",
-      "css": "left-thin",
+      "uid": "97bd5542ed3e143d2ee9b60e14487615",
+      "css": "list-add",
       "code": 59393,
       "src": "entypo"
     },
     {
-      "uid": "ec3be32c1330a17ef251b378ebd7d3ac",
-      "css": "left-outline",
+      "uid": "a2a74f5e7b7d9ba054897d8c795a326a",
+      "css": "list-bullet",
+      "code": 61642,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f48ae54adfb27d8ada53d0fd9e34ee10",
+      "css": "trash-empty",
       "code": 59394,
-      "src": "typicons"
-    },
-    {
-      "uid": "qqsxko9kqxh5g53lz33yonkpc2rpkvkn",
-      "css": "left",
-      "code": 59395,
-      "src": "typicons"
-    },
-    {
-      "uid": "bf882b30900da12fca090d9796bc3030",
-      "css": "mail",
-      "code": 59396,
       "src": "fontawesome"
     },
     {
-      "uid": "ccc2329632396dc096bb638d4b46fb98",
-      "css": "mail-alt",
-      "code": 61664,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "d7271d490b71df4311e32cdacae8b331",
-      "css": "home",
-      "code": 59397,
+      "uid": "1bafeeb1808a5fe24484c7890096901a",
+      "css": "user-plus",
+      "code": 62004,
       "src": "fontawesome"
     }
   ]
