--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -7,28 +7,22 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "41087bc74d4b20b55059c60a33bf4008",
-      "css": "edit",
+      "uid": "dd6c6b221a1088ff8a9b9cd32d0b3dd5",
+      "css": "check",
       "code": 59392,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d35a1d35efeb784d1dc9ac18b9b6c2b6",
+      "css": "pencil",
+      "code": 59393,
       "src": "fontawesome"
     },
     {
       "uid": "97bd5542ed3e143d2ee9b60e14487615",
       "css": "list-add",
-      "code": 59393,
-      "src": "entypo"
-    },
-    {
-      "uid": "a2a74f5e7b7d9ba054897d8c795a326a",
-      "css": "list-bullet",
-      "code": 61642,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "f48ae54adfb27d8ada53d0fd9e34ee10",
-      "css": "trash-empty",
       "code": 59394,
-      "src": "fontawesome"
+      "src": "entypo"
     },
     {
       "uid": "1bafeeb1808a5fe24484c7890096901a",
@@ -37,15 +31,45 @@
       "src": "fontawesome"
     },
     {
-      "uid": "44e04715aecbca7f266a17d5a7863c68",
-      "css": "plus",
+      "uid": "6274e0601f2feef7eced89146e708de0",
+      "css": "user-add",
       "code": 59395,
+      "src": "entypo"
+    },
+    {
+      "uid": "b9cd6e266f74ac97272b2fabbfbd0b85",
+      "css": "user-add-outline",
+      "code": 59396,
+      "src": "typicons"
+    },
+    {
+      "uid": "076f940ac56adee91dd43d6fd77dd0cf",
+      "css": "user-add-1",
+      "code": 59397,
+      "src": "typicons"
+    },
+    {
+      "uid": "bbfb51903f40597f0b70fd75bc7b5cac",
+      "css": "trash",
+      "code": 61944,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f48ae54adfb27d8ada53d0fd9e34ee10",
+      "css": "trash-empty",
+      "code": 59398,
       "src": "fontawesome"
     },
     {
       "uid": "bf882b30900da12fca090d9796bc3030",
       "css": "mail",
-      "code": 59396,
+      "code": 59399,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "a2a74f5e7b7d9ba054897d8c795a326a",
+      "css": "list-bullet",
+      "code": 61642,
       "src": "fontawesome"
     }
   ]
